src/test/deca/syntax/valid/sansobjet/lex_include_valid.deca
// test l'inclusion de fichier
// sortie: token filename


#include "IfthenElse.deca"



