src/test/deca/syntax/invalid/sansobjet/lex_invalid_include.deca
// test.deca: include file not found
//Description: inclusion fichier non existant
//Resultats: fichier non disponible
#include         "test.deca"
